--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Dec 04 17:12:44 CST 2018
-sdk.dir=C\:\\Users\\Ernie\\AppData\\Local\\Android\\Sdk
+#Wed Dec 05 00:03:59 SGT 2018
+sdk.dir=C\:\\Users\\Ivan\\AppData\\Local\\Android\\Sdk
