--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".GuestClass"/>
         <activity android:name=".RegisterClass"/>
+        <activity android:name=".UserClass"/>
     </application>
 
 </manifest>
