--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Dec 10 00:12:56 CST 2018
-sdk.dir=C\:\\Users\\Ernie\\AppData\\Local\\Android\\Sdk
+#Mon Dec 10 11:35:50 SGT 2018
+sdk.dir=C\:\\Users\\Ivan\\AppData\\Local\\Android\\Sdk
