--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Wed Dec 12 00:38:04 SGT 2018
-sdk.dir=C\:\\Users\\Ivan\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\Ernie\\AppData\\Local\\Android\\Sdk
