added UI elements and classes for edit

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,8 @@
         <activity android:name=".UserClass"/>
         <activity android:name=".AddCodeClass"/>
         <activity android:name=".ViewCodeClass"/>
+        <activity android:name=".ProfileClass"/>
+        <activity android:name=".EditCodeClass"/>
     </application>
 
 </manifest>
