--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Dec 12 19:05:28 PHT 2018
-sdk.dir=/Users/rachs/Library/Android/sdk
+#Wed Dec 12 20:05:56 CST 2018
+sdk.dir=C\:\\Users\\Ernie\\AppData\\Local\\Android\\Sdk
