--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Dec 12 20:56:54 SGT 2018
-sdk.dir=C\:\\Users\\Ivan\\AppData\\Local\\Android\\Sdk
+#Wed Dec 12 21:56:16 PHT 2018
+sdk.dir=/Users/rachs/Library/Android/sdk
