--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Wed Dec 12 21:56:16 PHT 2018
-sdk.dir=/Users/rachs/Library/Android/sdk
+sdk.dir=C\:\\Users\\Ivan\\AppData\\Local\\Android\\Sdk
